fix input issues on safari

--- a/src/app.css
+++ b/src/app.css
@@ -31,6 +31,9 @@ html[theme=dark] {
 
 * {
     font-family: "Jost", "Roboto", sans-serif;
+}
+
+*:not(input) {
     user-select: none;
     -webkit-user-select: none;
 }
